<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/navigation_graph"
            app:startDestination="@id/firstFragment">

    <fragment
            android:id="@+id/homeFragment"
            android:name="com.example.dictionary.views.fragments.nav_fragments.HomeFragment"
            android:label="@string/tv_home_page"
            tools:layout="@layout/fragment_home">
        <action
                android:id="@+id/home_to_first"
                app:destination="@id/firstFragment"/>
        <action
                android:id="@+id/home_to_second"
                app:destination="@id/secondFragment"/>
        <action
                android:id="@+id/home_to_third"
                app:destination="@id/thirdFragment"/>
    </fragment>

    <fragment
            android:id="@+id/firstFragment"
            android:name="com.example.dictionary.views.fragments.nav_fragments.FirstFragment"
            android:label="@string/tv_first_page"
            tools:layout="@layout/fragment_page">
        <action
                android:id="@+id/first_to_sixth"
                app:destination="@id/sixthFragment"/>
    </fragment>

    <fragment
            android:id="@+id/secondFragment"
            android:name="com.example.dictionary.views.fragments.nav_fragments.SecondFragment"
            android:label="@string/tv_second_page"
            tools:layout="@layout/fragment_page">
        <action
                android:id="@+id/second_to_fourth"
                app:destination="@id/fourthFragment"/>
    </fragment>

    <fragment
            android:id="@+id/thirdFragment"
            android:name="com.example.dictionary.views.fragments.nav_fragments.ThirdFragment"
            android:label="@string/tv_third_page"
            tools:layout="@layout/fragment_page">
        <action
                android:id="@+id/third_to_seventh"
                app:destination="@id/seventhFragment"/>
    </fragment>

    <fragment
            android:id="@+id/fourthFragment"
            android:name="com.example.dictionary.views.fragments.nav_fragments.FourthFragment"
            android:label="@string/tv_fourth_page"
            tools:layout="@layout/fragment_page">
        <action
                android:id="@+id/fourth_to_fifth"
                app:destination="@id/fifthFragment"/>
    </fragment>

    <fragment
            android:id="@+id/fifthFragment"
            android:name="com.example.dictionary.views.fragments.nav_fragments.FifthFragment"
            android:label="@string/tv_fifth_page"
            tools:layout="@layout/fragment_page">
        <action
                android:id="@+id/fifth_to_sixth"
                app:destination="@id/sixthFragment">
        </action>
    </fragment>

    <fragment
            android:id="@+id/sixthFragment"
            android:name="com.example.dictionary.views.fragments.nav_fragments.SixthFragment"
            android:label="@string/tv_sixth_page"
            tools:layout="@layout/fragment_page">
        <argument
                android:name="name"
                android:defaultValue="Sixth Page"
                app:nullable="false"
                app:argType="string" />
        <action
                android:id="@+id/sixth_to_seventh"
                app:destination="@id/seventhFragment"/>
    </fragment>

    <fragment
            android:id="@+id/seventhFragment"
            android:name="com.example.dictionary.views.fragments.nav_fragments.SeventhFragment"
            android:label="@string/tv_seventh_page"
            tools:layout="@layout/fragment_page">
        <!--<action
                android:id="@+id/seventh_to_translation"
                app:destination="@id/translationFragment"/>-->
    </fragment>

    <!--<fragment
            android:id="@+id/translationFragment"
            android:name="com.example.dictionary.views.fragments.TranslationFragment"
            android:label="@string/tv_translation"
            tools:layout="@layout/fragment_translation">
    </fragment>-->

</navigation>