<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.fragments.MenuFragment">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginRight="100dp"
            android:layout_marginLeft="100dp">

        <Button
                android:id="@+id/btn_dictionary"
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_height="50dp"
                android:text="@string/tv_dictionary"/>
        <Button
                android:id="@+id/btn_translation"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:text="@string/tv_translation"/>

        <Button
                android:id="@+id/btn_navigation"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/tv_navigation"/>

    </LinearLayout>

</LinearLayout>